# Qka-programa-

./: SecondSession.cpp  Week10.cpp  main.cpp  poslednata.cpp
ChatBot/: CMakeLists.txt  main.cpp
ChatBot/Actions/: Action.cpp  Action.h  AddSongToPlaylistAction.cpp  AddSongToPlaylistAction.h  CreatePlayListAction.cpp  CreatePlayListAction.h  DeletePlaylistAction.cpp  DeletePlaylistAction.h  Executioner.cpp  Executioner.h  RemoveSongFromPlaylistAction.cpp  RemoveSongFromPlaylistAction.h  ShowPlayListsAction.cpp  ShowPlayListsAction.h
ChatBot/IO/: IOOperations.cpp  IOOperations.h
ChatBot/InformationStores/playlists/: PlaylistsStore.cpp  PlaylistsStore.h
ChatBot/InformationStores/songs/: SongsStore.cpp  SongsStore.h
ChatBot/InformationStores/user/: UserStore.cpp  UserStore.h
ChatBot/Models/playlist/: Playlist.cpp  Playlist.h
ChatBot/Models/song/: Song.cpp  Song.h
ChatBot/Models/user/: User.cpp  User.h
Week_10/: data.ipb  example_data.ipb  main.cpp
Week_11/: main.cpp
Week_11/classes/: BookBot.cpp  BookBot.h  BookDrop.cpp  BookDrop.h  BookParser.cpp  BookParser.h  BookPile.cpp  BookPile.h  StoragePile.cpp  StoragePile.h
Week_11/enumerations/: BookCategory.h
Week_11/structs/: book.h
untitled/src/uk/reading/kc023090/: Ball.java  Drone.java
